<resources>
    <string name="app_name">GamersGuild</string>

    // misc
    <string name="app_logo">App Logo</string>
    <string name="reset_check_icon">Reset Check Image</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="cross_icon">Cross Icon</string>
    <string name="ml_logo">ML Logo</string>
    <string name="profile_dp_blank">Blank Profile Picture</string>
    <string name="back_arrow">Back Arrow</string>


    // game_stats.xml
    <string name="game_text">Mobile Legend</string>
    <string name="game_rank">Master</string>

    // forget_pw_confirm.xml
    <string name="pw_reset_confirm_text1">Password has been reset</string>
    <string name="pw_reset_confirm_text2">Please sign in with your new password</string>
    <string name="pw_reset_confirm_btn">Sign In</string>

    // forget_pw_email.xml
    <string name="pw_reset_email_text1">We will send you a link to reset your password</string>
    <string name="pw_reset_email_text2">Enter the email address associated with your account</string>
    <string name="pw_reset_email_inputText">Email</string>
    <string name="pw_reset_email_btn1">CONTINUE</string>
    <string name="pw_reset_email_text3">Don\'t have an account?</string>
    <string name="pw_reset_email_btn2">Sign up</string>

    // forget_pw_reset.xml
    <string name="pw_reset_reset_text1">Reset Password</string>
    <string name="pw_reset_reset_inputText1">Password</string>
    <string name="pw_reset_reset_inputText2">Confirm Password</string>
    <string name="pw_reset_reset_btn">CONTINUE</string>


    // edit_profile.xml
    <string name="edit_profile_inputText1">Username</string>
    <string name="edit_profile_inputText2">Age</string>
    <string name="edit_profile_inputText3">Gender</string>
    <string name="edit_profile_inputText4">Country</string>
    <string name="edit_profile_inputText5">About Me</string>

    // messages.xml
    <string name="message_title">Your conversations</string>

    // settings.xml
    <string name="settings_title">Settings</string>
    <string name="header_accountName">Username</string>
    <string name="header_accountEmail">Email</string>
    <string name="header_profile">Profile</string>
    <string name="header_conversations">Conversations</string>
    <string name="header_privacy">Privacy</string>
    <string name="header_notifications">Notifications</string>
    <string name="header_support">Support</string>
    <string name="header_about">About</string>
    <string name="header_logout">Logout</string>

    // account.xml
    <string name="header_account">Account</string>
    <string name="btn_resetPassword">Reset Password</string>
    <string name="btn_deleteAccount">Delete Account</string>

    // private_messages.xml
    <string name="profile_image">Recipient Profile Picture</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>