<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#132641"
    tools:context=".editProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- elements you want to make scrollable go here -->
            <ImageButton
                android:id="@+id/menuBtn2"
                android:layout_width="47dp"
                android:layout_height="41dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/white_menu_icon"
                android:contentDescription="@string/menu_icon"/>


            <ImageView
                android:id="@+id/profile_dp"
                android:layout_width="317dp"
                android:layout_height="163dp"
                android:contentDescription="@string/profile_dp_blank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                app:srcCompat="@drawable/profile_dp_blank" />


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit_profile_inputText1"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/editUserName"
                android:layout_width="342dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="05dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit_profile_inputText1"
                android:inputType="textEmailAddress"
                android:textColorHint="#838282"
                app:backgroundTint="#8A56AC" />


            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit_profile_inputText2"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/editAge"
                android:layout_width="342dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="05dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit_profile_inputText2"
                android:inputType="textEmailAddress"
                android:textColorHint="#838282"
                app:backgroundTint="#8A56AC" />


            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit_profile_inputText3"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/editGender"
                android:layout_width="342dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="05dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit_profile_inputText3"
                android:inputType="textEmailAddress"
                android:textColorHint="#838282"
                app:backgroundTint="#8A56AC" />


            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit_profile_inputText4"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/editCountry"
                android:layout_width="342dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="05dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edit_profile_inputText4"
                android:inputType="textEmailAddress"
                android:textColorHint="#838282"
                app:backgroundTint="#8A56AC" />


            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/edit_profile_inputText5"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/editAbout"
                android:layout_width="342dp"
                android:layout_height="100dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="05dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColorHint="#838282"
                android:background="@drawable/rectangletextbox"/>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>